<resources>
    <string name="app_name">My Shop App</string>

    <string name="empty_view_title_text">"There are no products here..."</string>
    <string name="empty_view_subtitle_text">"Add a new product"</string>
    <string name="category_overview">Overview</string>
    <string name="category_amount">Amount</string>
    <string name="category_quality">Quality</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_brand">Brand</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="hint_product_quantity">Quantity available</string>
    <string name="hint_product_price">Price</string>
    <string name="currency_per_price">NGN</string>
    <string name="category_photo">Add Photo</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="label_add_product">Add New Product</string>
    <string name="label_edit_product">Edit Product</string>
    <string name="sale_button_clicked"> Sale button clicked</string>
    <string name="editor_insert_product_failed">Product insert failed</string>
    <string name="editor_insert_product_successful">Product added</string>
    <string name="editor_update_failed">Update failed</string>
    <string name="editor_update_successful">Update successful</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_message">Delete this Product?</string>
    <string name="editor_delete_product_failed">Delete failed</string>
    <string name="editor_delete_product_successful">Delete successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="order">Order sent</string>
</resources>
